@@ -3,6 +3,7 @@ Features:
  - Support for gamepad axes, e.g. analog sticks or triggers
  - Add scale presets for up to 6x
  - Debugger: Add CLI "frame", frame advance command
+ - Better audio resampling via FFmpeg
 Bugfixes:
  - Qt: Fix issue with set frame sizes being the wrong height
  - Qt: Fix emulator crashing when full screen if a game is not running
